fix: disable button mobile display in screen sizes larger than 600px

--- a/public/create-session/index.css
+++ b/public/create-session/index.css
@@ -1,4 +1,5 @@
-input#activate-menu {
+input#activate-menu,
+#btn-mobile {
   display: none;
 }
 
